<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee6"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/underline"
        android:hint="@string/enter_name"
        android:inputType="textCapWords"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textCursorDrawable="@drawable/cursorcolor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="112dp"
        android:padding="16dp"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="34dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:onClick="Subtraction"
            android:text="@string/sub" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:text="@string/zero"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="34dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:onClick="Addition"
            android:text="@string/add" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/tops"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:text="@string/whipped"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:text="@string/choco"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:text="@string/caram"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="110dp"
        android:onClick="happen"
        android:text="@string/order" />
</LinearLayout>